--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -16,13 +16,13 @@
     {% endblock %}
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% include 'common/navbar.html' %}
 
     {% block content %}
     {% endblock %}
 
     {% block scripts %}
-    {% load bootstrap_javascript %}
+    {% bootstrap_javascript %}
     <script src="https://kit.fontawesome.com/cc1a8ab208.js" crossorigin="anonymous"></script>
     {% endblock %}
 </body>
