--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,5 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'authentication/base.html' %}
 
 {% block content %}
-
+<div class="container mt-5">
+    <div class="row mt-5 border p-5">
+        <div class="col-md-12">
+            <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="">
+                    <p class="text-muted">Don't have an account yet? <a href="">Register</a></p>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+              </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
