--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -1,5 +1,33 @@
-{% extends 'base.html' %}
+{% extends 'authentication/base.html' %}
 
 {% block content %}
-
+<div class="container mt-5">
+    <div class="row mt-5 border p-5">
+        <div class="col-md-12">
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <div class="mb-3">
+                    <label for="password2" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" id="password2">
+                </div>
+                <div class="">
+                    <p class="text-muted">Alread have an account? <a href="">Login</a> instead</p>
+                </div>
+                <button type="submit" class="btn btn-primary">Signup</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
