link static files

--- a/templates/authentication/base.html
+++ b/templates/authentication/base.html
@@ -12,6 +12,8 @@
     {% endif %}
     {% block style %}
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/logout.css' %}">
     {% bootstrap_css%}
     {% endblock %}
 </head>
