--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -12,6 +12,7 @@
     {% endif %}
     {% block style %}
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
     {% bootstrap_css%}
     {% endblock %}
 </head>
