--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -15,7 +15,7 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="" class="nav-link">Sign Up</a>
+                <a href="logout/" class="nav-link">Signout</a>
             </li>
         </ul>
       </div>
