--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -25,6 +25,9 @@
     {% block scripts %}
     {% bootstrap_javascript %}
     <script src="https://kit.fontawesome.com/cc1a8ab208.js" crossorigin="anonymous"></script>
+    <script>UPLOADCARE_PUBLIC_KEY = 'cfaa1af12f3b06ffd8ff';</script>
+    <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"
+        data-integration="Webflow"></script>
     {% endblock %}
 </body>
 </html>
