--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,6 +1,7 @@
 {% load bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +17,7 @@
     {% bootstrap_css%}
     {% endblock %}
 </head>
+
 <body>
     {% include 'common/navbar.html' %}
 
@@ -23,11 +25,13 @@
     {% endblock %}
 
     {% block scripts %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/script.js' %}"></script>
     {% bootstrap_javascript %}
     <script src="https://kit.fontawesome.com/cc1a8ab208.js" crossorigin="anonymous"></script>
     <script>UPLOADCARE_PUBLIC_KEY = 'cfaa1af12f3b06ffd8ff';</script>
-    <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"
-        data-integration="Webflow"></script>
+    <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js" data-integration="Webflow"></script>
     {% endblock %}
 </body>
+
 </html>
