--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="fas fa-child text-warning fs-1"></i></a>
+      <a class="navbar-brand" href="{% url 'index_view' %}"><i class="fas fa-child text-warning fs-1"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'index_view' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="{% url 'children_view' %}">Children</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'guardians_view' %}">Guardians</a>
           </li>
         </ul>
         <ul class="navbar-nav">
