--- a/templates/guardians/guardians.html
+++ b/templates/guardians/guardians.html
@@ -37,7 +37,10 @@
                     </div>
                 </div>
             </div>
-
+            <form class="d-flex mt-2" action="{% url 'search_child' %}">
+                <input class="form-control me-2" type="search" placeholder="Search Child" aria-label="Search" name="child">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
         <div class="col-md-12 mt-5">
             <table class="table table-warning table-hover table-striped border">
