--- a/templates/children/children.html
+++ b/templates/children/children.html
@@ -38,9 +38,9 @@
                 </div>
             </div>
             <form class="d-flex mt-2" action="{% url 'search_child' %}">
-                <input class="form-control me-2" type="search" placeholder="Search Child" aria-label="Search" name="child">
+                <input class="form-control me-2" type="search" placeholder="Search Child" aria-label="Search" name="name">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
+            </form>
 
         </div>
         <div class="col-md-12 mt-5">
