--- a/templates/guardians/guardians.html
+++ b/templates/guardians/guardians.html
@@ -37,8 +37,9 @@
                     </div>
                 </div>
             </div>
-            <form class="d-flex mt-2" action="{% url 'search_child' %}">
-                <input class="form-control me-2" type="search" placeholder="Search Child" aria-label="Search" name="child">
+            
+            <form class="d-flex mt-2" action="{% url 'search_guardian' %}">
+                <input class="form-control me-2" type="search" placeholder="Search Guardian" aria-label="Search" name="name">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
