--- a/templates/children/one_child.html
+++ b/templates/children/one_child.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            {% if passport %}
+            {% if child.passport %}
             <img src="{{child.passport.url}}" alt="">
             {% else %}
             <img src="{% static 'images/images.png' %}" alt="">
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
                 <div class="card-footer bg-dark">
-                    <a href="" class="btn btn-outline-warning">Update child's info</a>
+                    <a href="{% url 'update_child' %}" class="btn btn-outline-warning">Update child's info</a>
                 </div>
             </div>
         </div>
