--- a/templates/guardians/one_guardian.html
+++ b/templates/guardians/one_guardian.html
@@ -45,7 +45,7 @@
                     </ul>
                 </div>
                 <div class="card-footer bg-dark">
-                    <a href="" class="btn btn-outline-warning">Update guardian's info</a>
+                    <a href="{% url 'update_guardian' %}" class="btn btn-outline-warning">Update guardian's info</a>
                 </div>
             </div>
         </div>
