--- a/children/templates/children/one_child.html
+++ b/children/templates/children/one_child.html
@@ -35,7 +35,7 @@
                         </li>
                         {% if birth_cert_number %}
                         <li>
-                            <h5>Birth Certificate Number - {{child.birth_cert_number}}</h5>
+                            <h5>Birth Certificate Number - {{child.upi_number}}</h5>
                         </li>
                         {% else %}
                         <li>
