--- a/children/templates/children/children.html
+++ b/children/templates/children/children.html
@@ -51,7 +51,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">DOB</th>
                         <th scope="col">Gender</th>
-                        <th scope="col">Birth Certificate Number</th>
+                        <th scope="col">Upi Number</th>
                         <th scope="col">Guardian</th>
                         <th scope="col">Joined</th>
                     </tr>
@@ -63,7 +63,7 @@
                         <td>{{child.name}}</td>
                         <td>{{child.dob}}</td>
                         <td>{{child.gender}}</td>
-                        <td>{{child.birth_cert_number}}</td>
+                        <td>{{child.upi_number}}</td>
                         <td>{{child.guardian}}</td>
                         <td>{{child.joined_at}}</td>
                     </tr>
