--- a/children/templates/children/one_child.html
+++ b/children/templates/children/one_child.html
@@ -33,7 +33,7 @@
                         <li>
                             <h5>Gender - {{child.gender}}</h5>
                         </li>
-                        {% if birth_cert_number %}
+                        {% if upi_number %}
                         <li>
                             <h5>Birth Certificate Number - {{child.upi_number}}</h5>
                         </li>
