--- a/children/templates/children/search.html
+++ b/children/templates/children/search.html
@@ -20,7 +20,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Age</th>
                     <th scope="col">Gender</th>
-                    <th scope="col">Birth Certificate Number</th>
+                    <th scope="col">Upi Number</th>
                     <th scope="col">Guardian</th>
                     <th scope="col">Joined</th>
                 </tr>
@@ -32,7 +32,7 @@
                     <td>{{child.name}}</td>
                     <td>{{child.age}}</td>
                     <td>{{child.gender}}</td>
-                    <td>{{child.birth_cer_number}}</td>
+                    <td>{{child.upi_number}}</td>
                     <td>{{child.guardian}}</td>
                     <td>{{child.joined_at}}</td>
                 </tr>
